Closed Bug 754557 Opened 13 years ago Closed 13 years ago

JS fails to build with --enable-methodjit-spew

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: glandium, Assigned: glandium)

Details

Attachments

(1 file, 1 obsolete file)

/home/mh/mozilla-central/js/src/methodjit/Compiler.cpp: In member function ‘js::mjit::CompileStatus js::mjit::Compiler::pushActiveFrame(JSScript*, uint32_t)’: /home/mh/mozilla-central/js/src/methodjit/Compiler.cpp:442:45: error: ‘const struct js::analyze::LifetimeVariable’ has no member named ‘print’ /home/mh/mozilla-central/js/src/methodjit/Compiler.cpp:449:45: error: ‘const struct js::analyze::LifetimeVariable’ has no member named ‘print’ make[1]: *** [Compiler.o] Error 1
Attachment #623414 - Flags: review?(dmandelin)
Comment on attachment 623414 [details] [diff] [review] Fix building with --enable-methodjit-spew without --enable-debug This breaks --enable-debug :(
Attachment #623414 - Flags: review?(dmandelin)
Attachment #623414 - Attachment is obsolete: true
Attachment #623421 - Flags: review?(dmandelin) → review+
Assignee: general → mh+mozilla
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: