Bug 754557 - Fix building with --enable-methodjit-spew without --enable-debug. r=dmandelin